@@ -1,4 +1,9 @@
- /* $Id: ChangeLog,v 1.717 2000-02-10 00:27:16 bird Exp $ */
+ /* $Id: ChangeLog,v 1.718 2000-02-10 00:37:38 sandervl Exp $ */
+
+ 2000-02-10: Sander van Leeuwen <sandervl@xs4all.nl>
+	- GDI32: Added support for memory map handles in CreateDIBSection
+                 Fixed CreateICA/W; Open32's version is case sensitive whereas
+                 win32's apparently isn't.
 
  2000-02-10: Knut Stange Osmundsen (knut.stange.osmundsen@pmsc.no)
         - *: Updated the source tree to use autogenerated dependencies.
@@ -11,7 +16,7 @@
         - Tools/FastDep: Dependency tool. (Fast=Quick-and-Dirty)
              Moved from /src/win32k. This is currently used to generate
              dependency information.
-             Note that it don't have any precompiler logic! This is causeing
+             Note that it doesn't have any precompiler logic! This is causeing
              some warnings...
         - include/pdwin32.tool: Two new tools DEPEND and DOWITHDIRS.
 
